<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:textAlignment="gravity"
        android:textColor="@color/colorWhite"
        android:text="@string/menu_setting"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp">

        <RadioGroup
            android:gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/lang_en"
                android:text="@string/lang_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/setting_Language"/>

            <RadioButton
                android:id="@+id/lang_zh"
                android:text="@string/lang_zh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

        </RadioGroup>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp">

        <RadioGroup
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/sort_pop"
                android:text="@string/sort_pop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/setting_sort"/>

            <RadioButton
                android:id="@+id/sort_voting"
                android:text="@string/sort_voting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

        </RadioGroup>

    </RelativeLayout>

</LinearLayout>